--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -96,6 +96,13 @@ Changes to the previous version are marked in [.new]#bold and green.#
 * https://www.emeralddb.org/card/isawa-tadaka[Isawa Tadaka 1]
 * https://www.emeralddb.org/card/isawa-tsuke[Isawa Tsuke 1, role="new"]
 
+=== image:mons/scorpion.svg[width=20] [.scorpion]#Scorpion#
+* https://www.emeralddb.org/card/hidden-moon-dojo[Hidden Moon Dōjō]
+* https://www.emeralddb.org/card/yogo-junzo[Yogo Junzo]
+
+=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
+
+
 a|
 :show-link-uri!:
 == Restricted cards
@@ -123,18 +130,6 @@ a|
 * https://www.emeralddb.org/card/swift-magistrate[Swift Magistrate, role="new line-through"]
 * https://www.emeralddb.org/card/utaku-tetsuko[Utaku Tetsuko]
 
-|
-:show-link-uri!:
-== Banned Cards
-=== image:mons/scorpion.svg[width=20] [.scorpion]#Scorpion#
-* https://www.emeralddb.org/card/hidden-moon-dojo[Hidden Moon Dōjō]
-* https://www.emeralddb.org/card/yogo-junzo[Yogo Junzo]
-
-=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
-
-a|
-:show-link-uri!:
-
 |===
 
 <<<
@@ -145,10 +140,10 @@ All the cards listed here rotated out of the valid card pool and are not allowed
 Emerald Legacy tournaments. Unlike Banned cards, which might be unbanned at some point,
 rotated cards will never return to the valid card pool.
 
-Rotated are all cards of the https://www.emeralddb.org/cards?cycle=core[original FFG Core Set] as well as the https://www.emeralddb.org/cards?cycle=imperial[complete Imperial Cycle].
-In addition, the following cards are rotated because they were replaced with slightly different cards in https://www.emeralddb.org/cards?pack=restoration-of-balance[Restoration of Balance].
+Rotated are all cards of the https://www.emeralddb.org/cards?cycle=core[original FFG Core Set, role="new"] as well as the https://www.emeralddb.org/cards?cycle=imperial[complete Imperial Cycle, role="new"].
+In addition, the following cards are rotated because they were replaced with slightly different cards in https://www.emeralddb.org/cards?pack=restoration-of-balance[Restoration of Balance, role="new"].
 
-[cols="1a,1a,1a",stripes=none,frame=none,grid=none]
+[cols="1a,1a",stripes=none,frame=none,grid=none]
 |===
 
 |
@@ -198,8 +193,5 @@ In addition, the following cards are rotated because they were replaced with sli
 * https://www.emeralddb.org/card/command-by-name[Command by Name]
 * https://www.emeralddb.org/card/daikyu[Daikyū]
 * https://www.emeralddb.org/card/khanbulak-benefactor[Khanbulak Benefactor]
-
-|
-:show-link-uri!:
 
 |===
